src/test/ui/missing/missing-return.stderr
error[E0308]: mismatched types
  --> $DIR/missing-return.rs:3:17
   |
LL | fn f() -> isize { }
   |                 ^^^ expected isize, found ()
   |
   = note: expected type `isize`
              found type `()`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
